--- a/dev-mail-server-frontend/public/index.html
+++ b/dev-mail-server-frontend/public/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#343A40">
+  <meta name="csrf_token" content="">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <title>DevMailServer</title>
